--- a/variational-algos/optimization_loops.ipynb
+++ b/variational-algos/optimization_loops.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMcHfl8rtnZSn1K23h9DypF",
+      "authorship_tag": "ABX9TyP4Far52NT1ySBwAyJue/zi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,26 +36,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lLR71z475PCh",
-        "outputId": "b439076a-f64d-4bd0-d507-c9a51a93d418"
+        "outputId": "d9d5806b-38b9-4993-a022-30d288942f95"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.2/6.2 MB\u001b[0m \u001b[31m22.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.0/2.0 MB\u001b[0m \u001b[31m53.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m49.6/49.6 kB\u001b[0m \u001b[31m5.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m115.3/115.3 kB\u001b[0m \u001b[31m14.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m49.6/49.6 kB\u001b[0m \u001b[31m5.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m37.5/37.5 MB\u001b[0m \u001b[31m13.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m112.7/112.7 kB\u001b[0m \u001b[31m7.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m162.6/162.6 kB\u001b[0m \u001b[31m3.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.2/6.2 MB\u001b[0m \u001b[31m15.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.0/2.0 MB\u001b[0m \u001b[31m38.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m49.6/49.6 kB\u001b[0m \u001b[31m5.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m115.3/115.3 kB\u001b[0m \u001b[31m13.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m49.6/49.6 kB\u001b[0m \u001b[31m6.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m37.5/37.5 MB\u001b[0m \u001b[31m14.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m112.7/112.7 kB\u001b[0m \u001b[31m12.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m162.6/162.6 kB\u001b[0m \u001b[31m3.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "  Building wheel for pylatexenc (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Collecting git+https://github.com/qiskit-community/qiskit-textbook.git#subdirectory=qiskit-textbook-src\n",
-            "  Cloning https://github.com/qiskit-community/qiskit-textbook.git to /tmp/pip-req-build-odj0q8ee\n",
-            "  Running command git clone --filter=blob:none --quiet https://github.com/qiskit-community/qiskit-textbook.git /tmp/pip-req-build-odj0q8ee\n",
+            "  Cloning https://github.com/qiskit-community/qiskit-textbook.git to /tmp/pip-req-build-p3tp6r90\n",
+            "  Running command git clone --filter=blob:none --quiet https://github.com/qiskit-community/qiskit-textbook.git /tmp/pip-req-build-p3tp6r90\n",
             "  Resolved https://github.com/qiskit-community/qiskit-textbook.git to commit 0ae905083ec3872d7ddc6bb4001d5468f476d93f\n",
             "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Requirement already satisfied: qiskit in /usr/local/lib/python3.10/dist-packages (from qiskit-textbook==0.1.0) (0.44.2)\n",
@@ -67,7 +67,7 @@
             "Requirement already satisfied: setuptools>=18.5 in /usr/local/lib/python3.10/dist-packages (from ipython->qiskit-textbook==0.1.0) (67.7.2)\n",
             "Collecting jedi>=0.16 (from ipython->qiskit-textbook==0.1.0)\n",
             "  Downloading jedi-0.19.1-py2.py3-none-any.whl (1.6 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m13.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m9.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: decorator in /usr/local/lib/python3.10/dist-packages (from ipython->qiskit-textbook==0.1.0) (4.4.2)\n",
             "Requirement already satisfied: pickleshare in /usr/local/lib/python3.10/dist-packages (from ipython->qiskit-textbook==0.1.0) (0.7.5)\n",
             "Requirement already satisfied: traitlets>=4.2 in /usr/local/lib/python3.10/dist-packages (from ipython->qiskit-textbook==0.1.0) (5.7.1)\n",
@@ -150,8 +150,8 @@
             "Requirement already satisfied: pycparser in /usr/local/lib/python3.10/dist-packages (from cffi>=1.0.1->argon2-cffi-bindings->argon2-cffi->notebook>=4.4.1->widgetsnbextension~=3.6.0->ipywidgets->qiskit-textbook==0.1.0) (2.21)\n",
             "Building wheels for collected packages: qiskit-textbook\n",
             "  Building wheel for qiskit-textbook (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for qiskit-textbook: filename=qiskit_textbook-0.1.0-py3-none-any.whl size=17522 sha256=fb6478ef4100a9e1c18760af10a55c943fedad29e641c63b1215503caf7829fe\n",
-            "  Stored in directory: /tmp/pip-ephem-wheel-cache-w4a4gtwr/wheels/a4/af/1e/358474758f89b7223d73e3a3b05d32a15554fede054868448c\n",
+            "  Created wheel for qiskit-textbook: filename=qiskit_textbook-0.1.0-py3-none-any.whl size=17522 sha256=e6d1cf8256fa5d7f10a0fc49a1bf50b27f9e053de6050efd3d8bab2ea9d547eb\n",
+            "  Stored in directory: /tmp/pip-ephem-wheel-cache-j4seyceq/wheels/a4/af/1e/358474758f89b7223d73e3a3b05d32a15554fede054868448c\n",
             "Successfully built qiskit-textbook\n",
             "Installing collected packages: jedi, qiskit-textbook\n",
             "Successfully installed jedi-0.19.1 qiskit-textbook-0.1.0\n"
@@ -204,7 +204,7 @@
           "height": 191
         },
         "id": "O6rJCfPZ5XFG",
-        "outputId": "e1c2d201-81bc-4ca6-e055-2a990689d995"
+        "outputId": "d25a1209-61c0-4751-9716-dc17fa001e7a"
       },
       "execution_count": 2,
       "outputs": [
@@ -255,7 +255,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4S9-VlpC53w2",
-        "outputId": "873fe61d-6391-4e84-b1d1-3f3c2cb3a09f"
+        "outputId": "94d6ad20-b336-4cd2-b684-299a2c46acb1"
       },
       "execution_count": 4,
       "outputs": [
@@ -263,19 +263,19 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m130.9/130.9 kB\u001b[0m \u001b[31m3.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m298.7/298.7 kB\u001b[0m \u001b[31m9.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m130.9/130.9 kB\u001b[0m \u001b[31m2.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m298.7/298.7 kB\u001b[0m \u001b[31m9.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
             "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
             "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m242.9/242.9 kB\u001b[0m \u001b[31m10.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m55.8/55.8 kB\u001b[0m \u001b[31m5.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m242.9/242.9 kB\u001b[0m \u001b[31m9.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m55.8/55.8 kB\u001b[0m \u001b[31m7.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
             "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
             "  Preparing metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m129.9/129.9 kB\u001b[0m \u001b[31m10.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m129.9/129.9 kB\u001b[0m \u001b[31m9.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m143.4/143.4 kB\u001b[0m \u001b[31m10.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m129.9/129.9 kB\u001b[0m \u001b[31m10.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m143.4/143.4 kB\u001b[0m \u001b[31m9.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  Building wheel for ibm-platform-services (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
             "  Building wheel for ibm-cloud-sdk-core (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n"
           ]
@@ -293,9 +293,9 @@
           "height": 34
         },
         "id": "zWfWdmTo6Oq3",
-        "outputId": "7f5a62fd-80e9-4e6e-c689-3ccd317bafe5"
+        "outputId": "e5c24dfe-ce4a-4005-8b8f-025559f93ba3"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -325,7 +325,7 @@
       "metadata": {
         "id": "6q2CjeMj50rH"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -341,10 +341,35 @@
         "result"
       ],
       "metadata": {
-        "id": "XuUuQScy58U2"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XuUuQScy58U2",
+        "outputId": "03ffe78b-9fcf-499d-df66-9b5b3d058a23"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              " message: Optimization terminated successfully\n",
+              " success: True\n",
+              "  status: 0\n",
+              "     fun: -0.7995\n",
+              "       x: [ 1.920e+05 -4.080e+06  1.400e+06 -3.373e+06 -1.398e+04\n",
+              "            2.568e+05  5.780e+05  2.298e+06]\n",
+              "     nit: 49\n",
+              "     jac: [ 1.342e+05  1.812e+06 -1.443e+06 -1.007e+06 -3.221e+06\n",
+              "           -3.121e+06  7.382e+05  1.174e+06]\n",
+              "    nfev: 932\n",
+              "    njev: 49"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -370,10 +395,40 @@
         "result"
       ],
       "metadata": {
-        "id": "TmTpLxcu6Bth"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TmTpLxcu6Bth",
+        "outputId": "63664ece-1538-4f97-f3b9-811eba1f4cff"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "  message: Desired error not necessarily achieved due to precision loss.\n",
+              "  success: False\n",
+              "   status: 2\n",
+              "      fun: 1.6425\n",
+              "        x: [ 1.000e+00  1.000e+00  1.000e+00  1.000e+00  1.000e+00\n",
+              "             1.000e+00  1.000e+00  1.000e+00]\n",
+              "      nit: 2\n",
+              "      jac: [-9.731e+05  4.832e+06 -2.282e+06 -1.074e+06  7.449e+06\n",
+              "             2.684e+05  3.389e+06  5.704e+06]\n",
+              " hess_inv: [[ 9.826e-01  7.103e-02 ...  1.310e-02  1.980e-02]\n",
+              "            [ 7.103e-02  9.436e-01 ... -2.215e-01 -1.642e-01]\n",
+              "            ...\n",
+              "            [ 1.310e-02 -2.215e-01 ...  9.115e-01 -2.536e-01]\n",
+              "            [ 1.980e-02 -1.642e-01 ... -2.536e-01  5.605e-01]]\n",
+              "     nfev: 210\n",
+              "     njev: 22"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -390,7 +445,38 @@
         "result"
       ],
       "metadata": {
-        "id": "Hb87p0jj8hkM"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Hb87p0jj8hkM",
+        "outputId": "d1da2cd2-4666-41d4-eb23-49ddab9cdc7b"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              " message: Optimization terminated successfully.\n",
+              " success: True\n",
+              "  status: 1\n",
+              "     fun: -3.9975\n",
+              "       x: [ 3.159e+00 -9.905e-02  1.578e+00  3.177e+00  1.968e+00\n",
+              "           -1.173e+00  2.227e+00  8.933e-01]\n",
+              "    nfev: 99\n",
+              "   maxcv: 0.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "OEIR8v12XRsO"
       },
       "execution_count": null,
       "outputs": []
